# llmtools

./: COMPREHENSIVE_TEST_SUITE.md  DATABASE_USAGE_GUIDE.md  README.md  RECOVERY_QUICK_REFERENCE.md  RECOVERY_USAGE_GUIDE.md  examples_database_usage.py  examples_real_usage.py  pyproject.toml  run_comprehensive_tests.py  test_db.db  test_logging_enhancement.py  test_validator_example.py
.kiro/specs/parallel-processor-recovery/: design.md  requirements.md  tasks.md
.kiro/specs/sqlite-realtime-storage/: design.md  requirements.md  tasks.md
examples/: examples_database_updater.py  examples_enhanced_logging.py  examples_real_llm_usage.py  examples_recovery_analyzer.py  examples_recovery_basic.py  examples_recovery_comprehensive.py  examples_recovery_processor.py
src/llmtools/: __init__.py  database_manager.py  database_updater.py  database_validator.py  openrouter.py  parallel_llm_processor.py  recovery_analyzer.py  recovery_processor.py  utils.py
tests/: test_comprehensive_integration.py  test_database_generator.py  test_database_manager.py  test_database_updater.py  test_database_validator.py  test_parallel_llm_processor.py  test_performance.py  test_performance_optimization.py  test_recovery_analyzer.py  test_recovery_processor.py
